# generic_record_server

./: CMakeLists.txt  Readme.md  generic_client.h  generic_client_factory.h  generic_record_impl.cpp  greeter.proto  greeter_client.cpp  greeter_client.h  greeter_client_factory.cpp  greeter_server.cpp  main.cpp  rpc_client.cpp  rpc_client_factory.cpp
include/udf/: generic_client.h  generic_client_factory.h  generic_record.h  generic_record_impl.h
plugin_loader/: plugin.cpp
proto/: greeter.proto  sample.proto
server/: greeter_server.cpp  rpc_server.cpp
src/udf/: generic_record_impl.cpp  plugin_api_impl.cpp  udf_loader.cpp
